src-old/parser/DdsJsIdlParser.ts
// Generated from src/parser/DdsJsIdl.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import DdsJsIdlVisitor from "./DdsJsIdlVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


// @ts-nocheck

export default class DdsJsIdlParser extends Parser {
	public static readonly OPEN_BRACE = 1;
	public static readonly ASSIGN_OP = 2;
	public static readonly CLOSE_BRACE = 3;
	public static readonly STAT_END = 4;
	public static readonly OPEN_ANGLE = 5;
	public static readonly CLOSE_ANGLE = 6;
	public static readonly OPEN_SQUARE = 7;
	public static readonly CLOSE_SQUARE = 8;
	public static readonly COMMA_SEP = 9;
	public static readonly SCOPE_OP = 10;
	public static readonly COLON_SEP = 11;
	public static readonly OPEN_PAREN = 12;
	public static readonly CLOSE_PAREN = 13;
	public static readonly MINUS_OP = 14;
	public static readonly DOT_OP = 15;
	public static readonly MODULE_KW = 16;
	public static readonly TYPEDEF_KW = 17;
	public static readonly CONST_KW = 18;
	public static readonly ENUM_KW = 19;
	public static readonly OCTET_KW = 20;
	public static readonly UNSIGNED_KW = 21;
	public static readonly SHORT_KW = 22;
	public static readonly LONG_KW = 23;
	public static readonly FLOAT_KW = 24;
	public static readonly DOUBLE_KW = 25;
	public static readonly STRING_KW = 26;
	public static readonly SEQUENCE_KW = 27;
	public static readonly STRUCT_KW = 28;
	public static readonly VALUETYPE_KW = 29;
	public static readonly UNION_KW = 30;
	public static readonly SWITCH_KW = 31;
	public static readonly CASE_KW = 32;
	public static readonly BOOLEAN_KW = 33;
	public static readonly CHAR_KW = 34;
	public static readonly BOOLEAN_TRUE = 35;
	public static readonly BOOLEAN_FALSE = 36;
	public static readonly DEFAULT_KW = 37;
	public static readonly IDENTIFIER = 38;
	public static readonly NATURAL_NUMBER = 39;
	public static readonly HEXADECIMAL_LITERAL = 40;
	public static readonly OCTAL_LITERAL = 41;
	public static readonly DIGIT_SEQUENCE = 42;
	public static readonly REAL_NUMBER = 43;
	public static readonly STRING_LITERAL = 44;
	public static readonly CHAR_LITERAL = 45;
	public static readonly FLOAT_EXP_PREFIX = 46;
	public static readonly FIXED_PT_SUFFIX = 47;
	public static readonly WS = 48;
	public static readonly SL_COMMENT = 49;
	public static readonly ML_COMMENT = 50;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_translationUnit = 0;
	public static readonly RULE_module = 1;
	public static readonly RULE_moduleMember = 2;
	public static readonly RULE_typeAlias = 3;
	public static readonly RULE_typeDescription = 4;
	public static readonly RULE_scopedName = 5;
	public static readonly RULE_constantDefinition = 6;
	public static readonly RULE_enumDefinition = 7;
	public static readonly RULE_enumLiteral = 8;
	public static readonly RULE_dataStructureDefinition = 9;
	public static readonly RULE_memberDefinition = 10;
	public static readonly RULE_unionDefinition = 11;
	public static readonly RULE_unionDiscriminator = 12;
	public static readonly RULE_unionMemberDefinition = 13;
	public static readonly RULE_unionCaseLabel = 14;
	public static readonly RULE_unionCaseConstantExpr = 15;
	public static readonly RULE_sequenceType = 16;
	public static readonly RULE_stringType = 17;
	public static readonly RULE_arrayDimensions = 18;
	public static readonly RULE_sizeDefinition = 19;
	public static readonly RULE_primitiveType = 20;
	public static readonly RULE_intType = 21;
	public static readonly RULE_floatType = 22;
	public static readonly RULE_booleanType = 23;
	public static readonly RULE_charType = 24;
	public static readonly RULE_literalValue = 25;
	public static readonly RULE_charLiteral = 26;
	public static readonly RULE_stringLiteral = 27;
	public static readonly RULE_booleanLiteral = 28;
	public static readonly RULE_integerLiteral = 29;
	public static readonly RULE_signedInteger = 30;
	public static readonly RULE_floatingPointLiteral = 31;
	public static readonly RULE_fixedPointLiteral = 32;
	public static readonly literalNames: (string | null)[] = [ null, "'{'", 
                                                            "'='", "'}'", 
                                                            "';'", "'<'", 
                                                            "'>'", "'['", 
                                                            "']'", "','", 
                                                            "'::'", "':'", 
                                                            "'('", "')'", 
                                                            "'-'", "'.'", 
                                                            "'module'", 
                                                            "'typedef'", 
                                                            "'const'", "'enum'", 
                                                            "'octet'", "'unsigned'", 
                                                            "'short'", "'long'", 
                                                            "'float'", "'double'", 
                                                            "'string'", 
                                                            "'sequence'", 
                                                            "'struct'", 
                                                            "'valuetype'", 
                                                            "'union'", "'switch'", 
                                                            "'case'", "'boolean'", 
                                                            "'char'", "'TRUE'", 
                                                            "'FALSE'", "'default'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "OPEN_BRACE", 
                                                             "ASSIGN_OP", 
                                                             "CLOSE_BRACE", 
                                                             "STAT_END", 
                                                             "OPEN_ANGLE", 
                                                             "CLOSE_ANGLE", 
                                                             "OPEN_SQUARE", 
                                                             "CLOSE_SQUARE", 
                                                             "COMMA_SEP", 
                                                             "SCOPE_OP", 
                                                             "COLON_SEP", 
                                                             "OPEN_PAREN", 
                                                             "CLOSE_PAREN", 
                                                             "MINUS_OP", 
                                                             "DOT_OP", "MODULE_KW", 
                                                             "TYPEDEF_KW", 
                                                             "CONST_KW", 
                                                             "ENUM_KW", 
                                                             "OCTET_KW", 
                                                             "UNSIGNED_KW", 
                                                             "SHORT_KW", 
                                                             "LONG_KW", 
                                                             "FLOAT_KW", 
                                                             "DOUBLE_KW", 
                                                             "STRING_KW", 
                                                             "SEQUENCE_KW", 
                                                             "STRUCT_KW", 
                                                             "VALUETYPE_KW", 
                                                             "UNION_KW", 
                                                             "SWITCH_KW", 
                                                             "CASE_KW", 
                                                             "BOOLEAN_KW", 
                                                             "CHAR_KW", 
                                                             "BOOLEAN_TRUE", 
                                                             "BOOLEAN_FALSE", 
                                                             "DEFAULT_KW", 
                                                             "IDENTIFIER", 
                                                             "NATURAL_NUMBER", 
                                                             "HEXADECIMAL_LITERAL", 
                                                             "OCTAL_LITERAL", 
                                                             "DIGIT_SEQUENCE", 
                                                             "REAL_NUMBER", 
                                                             "STRING_LITERAL", 
                                                             "CHAR_LITERAL", 
                                                             "FLOAT_EXP_PREFIX", 
                                                             "FIXED_PT_SUFFIX", 
                                                             "WS", "SL_COMMENT", 
                                                             "ML_COMMENT" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"translationUnit", "module", "moduleMember", "typeAlias", "typeDescription", 
		"scopedName", "constantDefinition", "enumDefinition", "enumLiteral", "dataStructureDefinition", 
		"memberDefinition", "unionDefinition", "unionDiscriminator", "unionMemberDefinition", 
		"unionCaseLabel", "unionCaseConstantExpr", "sequenceType", "stringType", 
		"arrayDimensions", "sizeDefinition", "primitiveType", "intType", "floatType", 
		"booleanType", "charType", "literalValue", "charLiteral", "stringLiteral", 
		"booleanLiteral", "integerLiteral", "signedInteger", "floatingPointLiteral", 
		"fixedPointLiteral",
	];
	public get grammarFileName(): string { return "DdsJsIdl.g4"; }
	public get literalNames(): (string | null)[] { return DdsJsIdlParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return DdsJsIdlParser.symbolicNames; }
	public get ruleNames(): string[] { return DdsJsIdlParser.ruleNames; }
	public get serializedATN(): number[] { return DdsJsIdlParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, DdsJsIdlParser._ATN, DdsJsIdlParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public translationUnit(): TranslationUnitContext {
		let localctx: TranslationUnitContext = new TranslationUnitContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, DdsJsIdlParser.RULE_translationUnit);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 67;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 66;
				this.module_();
				}
				}
				this.state = 69;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la===16);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public module_(): ModuleContext {
		let localctx: ModuleContext = new ModuleContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, DdsJsIdlParser.RULE_module);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 71;
			this.match(DdsJsIdlParser.MODULE_KW);
			this.state = 72;
			this.match(DdsJsIdlParser.IDENTIFIER);
			this.state = 73;
			this.match(DdsJsIdlParser.OPEN_BRACE);
			this.state = 77;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1343160320) !== 0)) {
				{
				{
				this.state = 74;
				this.moduleMember();
				}
				}
				this.state = 79;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 80;
			this.match(DdsJsIdlParser.CLOSE_BRACE);
			this.state = 82;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===4) {
				{
				this.state = 81;
				this.match(DdsJsIdlParser.STAT_END);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public moduleMember(): ModuleMemberContext {
		let localctx: ModuleMemberContext = new ModuleMemberContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, DdsJsIdlParser.RULE_moduleMember);
		try {
			this.state = 90;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 28:
				localctx = new DataStructureModuleMemberContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 84;
				this.dataStructureDefinition();
				}
				break;
			case 17:
				localctx = new TypeAliasModuleMemberContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 85;
				this.typeAlias();
				}
				break;
			case 18:
				localctx = new ConstantModuleMemberContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 86;
				this.constantDefinition();
				}
				break;
			case 19:
				localctx = new EnumModuleMemberContext(this, localctx);
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 87;
				this.enumDefinition();
				}
				break;
			case 30:
				localctx = new UnionModuleMemberContext(this, localctx);
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 88;
				this.unionDefinition();
				}
				break;
			case 16:
				localctx = new SubmoduleModuleMemberContext(this, localctx);
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 89;
				this.module_();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public typeAlias(): TypeAliasContext {
		let localctx: TypeAliasContext = new TypeAliasContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, DdsJsIdlParser.RULE_typeAlias);
		try {
			this.state = 103;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				localctx = new NonArrayTypedefContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 92;
				this.match(DdsJsIdlParser.TYPEDEF_KW);
				this.state = 93;
				this.typeDescription();
				this.state = 94;
				this.match(DdsJsIdlParser.IDENTIFIER);
				this.state = 95;
				this.match(DdsJsIdlParser.STAT_END);
				}
				break;
			case 2:
				localctx = new ArrayTypedefContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 97;
				this.match(DdsJsIdlParser.TYPEDEF_KW);
				this.state = 98;
				this.typeDescription();
				this.state = 99;
				this.match(DdsJsIdlParser.IDENTIFIER);
				this.state = 100;
				this.arrayDimensions();
				this.state = 101;
				this.match(DdsJsIdlParser.STAT_END);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public typeDescription(): TypeDescriptionContext {
		let localctx: TypeDescriptionContext = new TypeDescriptionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, DdsJsIdlParser.RULE_typeDescription);
		try {
			this.state = 109;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 27:
				localctx = new SequenceTypeDescContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 105;
				this.sequenceType();
				}
				break;
			case 26:
				localctx = new StringTypeDescContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 106;
				this.stringType();
				}
				break;
			case 20:
			case 21:
			case 22:
			case 23:
			case 24:
			case 25:
			case 33:
			case 34:
				localctx = new PrimitiveTypeDescContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 107;
				this.primitiveType();
				}
				break;
			case 10:
			case 38:
				localctx = new CustomTypeNameDescContext(this, localctx);
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 108;
				this.scopedName();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public scopedName(): ScopedNameContext {
		let localctx: ScopedNameContext = new ScopedNameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, DdsJsIdlParser.RULE_scopedName);
		let _la: number;
		try {
			this.state = 123;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 38:
				localctx = new RelativeScopedNameContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 111;
				this.match(DdsJsIdlParser.IDENTIFIER);
				this.state = 116;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===10) {
					{
					{
					this.state = 112;
					this.match(DdsJsIdlParser.SCOPE_OP);
					this.state = 113;
					this.match(DdsJsIdlParser.IDENTIFIER);
					}
					}
					this.state = 118;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				break;
			case 10:
				localctx = new AbsoluteScopedNameContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 119;
				this.match(DdsJsIdlParser.SCOPE_OP);
				this.state = 120;
				this.match(DdsJsIdlParser.IDENTIFIER);
				this.state = 121;
				this.match(DdsJsIdlParser.SCOPE_OP);
				this.state = 122;
				this.scopedName();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public constantDefinition(): ConstantDefinitionContext {
		let localctx: ConstantDefinitionContext = new ConstantDefinitionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, DdsJsIdlParser.RULE_constantDefinition);
		try {
			this.state = 146;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				localctx = new PrimitiveValueConstantContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 125;
				this.match(DdsJsIdlParser.CONST_KW);
				this.state = 126;
				this.primitiveType();
				this.state = 127;
				this.match(DdsJsIdlParser.IDENTIFIER);
				this.state = 128;
				this.match(DdsJsIdlParser.ASSIGN_OP);
				this.state = 129;
				this.literalValue();
				this.state = 130;
				this.match(DdsJsIdlParser.STAT_END);
				}
				break;
			case 2:
				localctx = new StringValueConstantContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 132;
				this.match(DdsJsIdlParser.CONST_KW);
				this.state = 133;
				this.stringType();
				this.state = 134;
				this.match(DdsJsIdlParser.IDENTIFIER);
				this.state = 135;
				this.match(DdsJsIdlParser.ASSIGN_OP);
				this.state = 136;
				this.literalValue();
				this.state = 137;
				this.match(DdsJsIdlParser.STAT_END);
				}
				break;
			case 3:
				localctx = new CustomTypeValueConstantContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 139;
				this.match(DdsJsIdlParser.CONST_KW);
				this.state = 140;
				this.scopedName();
				this.state = 141;
				this.match(DdsJsIdlParser.IDENTIFIER);
				this.state = 142;
				this.match(DdsJsIdlParser.ASSIGN_OP);
				this.state = 143;
				this.literalValue();
				this.state = 144;
				this.match(DdsJsIdlParser.STAT_END);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public enumDefinition(): EnumDefinitionContext {
		let localctx: EnumDefinitionContext = new EnumDefinitionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, DdsJsIdlParser.RULE_enumDefinition);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 148;
			this.match(DdsJsIdlParser.ENUM_KW);
			this.state = 149;
			this.match(DdsJsIdlParser.IDENTIFIER);
			this.state = 150;
			this.match(DdsJsIdlParser.OPEN_BRACE);
			this.state = 151;
			this.enumLiteral();
			this.state = 156;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===9) {
				{
				{
				this.state = 152;
				this.match(DdsJsIdlParser.COMMA_SEP);
				this.state = 153;
				this.enumLiteral();
				}
				}
				this.state = 158;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 159;
			this.match(DdsJsIdlParser.CLOSE_BRACE);
			this.state = 160;
			this.match(DdsJsIdlParser.STAT_END);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public enumLiteral(): EnumLiteralContext {
		let localctx: EnumLiteralContext = new EnumLiteralContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, DdsJsIdlParser.RULE_enumLiteral);
		try {
			this.state = 166;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 10, this._ctx) ) {
			case 1:
				localctx = new ManualNumberedContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 162;
				this.match(DdsJsIdlParser.IDENTIFIER);
				this.state = 163;
				this.match(DdsJsIdlParser.ASSIGN_OP);
				this.state = 164;
				this.integerLiteral();
				}
				break;
			case 2:
				localctx = new AutoNumberedContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 165;
				this.match(DdsJsIdlParser.IDENTIFIER);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
